# datapipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  my_dataset.yaml  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml  tests.yml
docs/: architecture.md  artifacts.md  backlog.md  cli.md  config.md  dataflow.md  extending.md  inflow.md  python.md  research.md  testing.md  transforms.md
docs/transforms/: feature.md  index.md  postprocess.md  preprocess.md  record.md  series.md  stream.md  variable.md
examples/: README.md
examples/minimal_project/: run_dataframe.py  run_torch.py
src/datapipeline/: .gitignore  plugins.py  runtime.py
src/datapipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/datapipeline/alignment/: broadcast.py  engine.py
src/datapipeline/analysis/: vector_analyzer.py
src/datapipeline/artifacts/: __init__.py  errors.py  executor.py  fingerprints.py  hydration.py  models.py  planning.py  registry.py  scaler.py  series.py  settings.py  specs.py  ticks.py  validation.py  variable_records.py
src/datapipeline/cache/: __init__.py  models.py  pickle_store.py  record_streams.py  signatures.py
src/datapipeline/cli/: app.py  command_router.py  logging_setup.py  output_options.py  parser_builder.py  prompts.py  source_options.py  version.py  visual_source.py  visuals.py  workspace.py  workspace_utils.py
src/datapipeline/composed/: __init__.py  alignment.py
src/datapipeline/config/: build.py  build_defaults.py  build_resolution.py  catalog.py  context.py  execution.py  metadata.py  model_utils.py  observability.py  options.py  postprocess.py  preview.py  project.py  resolution.py  run.py  serve_resolution.py  sources.py  split.py  streams.py  tasks.py  transforms.py  workspace.py
src/datapipeline/dag/: __init__.py  context.py  dag.py  events.py  node.py  observer.py  runner.py
src/datapipeline/domain/: __init__.py  feature.py  feature_id.py  record.py  sample.py  sample_key.py  series.py  series_id.py  stream.py  value.py  variable.py  variable_id.py  vector.py
src/datapipeline/execution/: __init__.py  context.py  dag_stream.py  events.py  node.py  observability.py  observer.py  pipeline.py  run_events.py  runner.py  settings.py  stage_dag.py
src/datapipeline/integrations/: __init__.py  ml.py
src/datapipeline/io/: compression.py  csv_projection.py  dataset_table.py  factory.py  formatters.py  normalization.py  output.py  protocols.py  readers.py  serialization.py  serializers.py  sinks.py  writers.py
src/datapipeline/joined/: __init__.py  engine.py  model.py
src/datapipeline/operations/: __init__.py  dispatch.py  inspect.py  persistence.py
src/datapipeline/parsers/: identity.py  temporal_csv.py  temporal_json.py  temporal_record.py
src/datapipeline/pipeline/: artifacts.py  context.py  observability.py  pipelines.py  postprocess_context.py  split.py  stages.py
src/datapipeline/pipelines/: __init__.py  sort.py  stream_id.py
src/datapipeline/profiles/: __init__.py  execution.py  executor.py  loader.py  materialize.py  models.py  orchestration.py  planning.py  reporting.py  request_builder.py  runtime_profiles.py  selection.py
src/datapipeline/registries/: registries.py  registry.py
src/datapipeline/services/: artifacts.py  bootstrap.py  config_inventory.py  config_refs.py  constants.py  dataset.py  definitions.py  entrypoints.py  execution_artifacts.py  execution_lock.py  executions.py  factories.py  materialize.py  operations.py  path_policy.py  paths.py  pipeline.py  pipeline_fingerprints.py  project.py  project_definition.py  project_paths.py  run_artifacts.py  run_entries.py  runs.py  runtime_compiler.py  runtime_entries.py  temp_cleanup.py
src/datapipeline/sources/: data_loader.py  decoders.py  factory.py  foreach.py  loader.py  observability.py  parquet_loader.py  parser.py  ports.py  source.py  transports.py
src/datapipeline/transforms/: engine.py  feature.py  filter.py  interfaces.py  record.py  rolling_slope.py  rolling_window.py  sequence.py  spec.py  time.py  utils.py  vector.py  vector_utils.py  where.py
src/datapipeline/utils/: json_artifact.py  load.py  paths.py  placeholders.py  rich_compat.py  time.py  window.py
src/datapipeline/vector_inputs/: __init__.py  store.py
tests/: README.md  combiners.py  conftest.py  series_helpers.py  test_build_config.py  test_build_utils.py  test_config_pipeline.py  test_config_resolution.py  test_contract_cli.py  test_integration_drop_null.py  test_integration_full_regression.py  test_integration_incomplete_real_data.py  test_integration_vertical_drop_build_metadata.py  test_integration_vertical_drop_metadata.py  test_output_resolution.py  test_regression_vectors.py  test_run_cli.py  test_run_config.py  test_scaffold_plugin.py  test_scaffold_source.py  test_split_stage.py  test_tasks_loader.py  test_transforms.py  test_vector_analyzer.py  test_visuals_runner.py  test_workspace_config.py  variable_record_helpers.py  vector_input_helpers.py
tests/fixtures/drop_null_project/: dataset.yaml  postprocess.yaml  project.yaml
tests/fixtures/identity_alignment_project/: dataset.yaml  project.yaml
tests/fixtures/incomplete_generation_project/: dataset.yaml  postprocess.yaml  project.yaml
tests/fixtures/incomplete_prices_project/: dataset.yaml  postprocess.yaml  project.yaml
tests/fixtures/regression_project/: dataset.yaml  postprocess.yaml  project.yaml
tests/fixtures/walk_forward_project/: dataset.yaml  project.yaml
tests/helpers/: regression.py
tests/integration/: test_integration_drop_null.py  test_integration_full_regression.py  test_integration_identity_alignment_regression.py  test_integration_incomplete_real_data.py  test_integration_vertical_drop_build_metadata.py  test_integration_vertical_drop_metadata.py  test_parquet_dataset_output.py  test_parquet_source_input.py  test_regression_invariants.py  test_walk_forward_regression.py
tests/integrations/: test_ml.py
tests/loaders/: __init__.py  dummy.py
tests/parsers/: __init__.py  temporal_csv.py  temporal_json.py
tests/unit/: test_record.py
(+858 files in other folders)
