[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jerry-thomas"
version = "2.1.0"
description = "Jerry-Thomas: a stream-first, plugin-friendly data pipeline (mixology-themed CLI)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anders Skott Lind" }]
urls = { "Homepage" = "https://github.com/mr-lovalova/datapipeline", "Repository" = "https://github.com/mr-lovalova/datapipeline", "Issues" = "https://github.com/mr-lovalova/datapipeline/issues" }
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=5.4",
  "jinja2>=3.0",
  "rich>=13",
]

[project.optional-dependencies]
# Extra helpers for ML adapters in datapipeline.integrations
ml = [
  "pandas>=2.0",
  "torch>=2.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
jerry = "datapipeline.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datapipeline = [
  "templates/dataset_config.yaml",
  "templates/plugin_skeleton/**",
  "templates/demo_skeleton/**",
  "templates/stubs/**"
]

[project.entry-points."datapipeline.filters"]

[project.entry-points."datapipeline.transforms.record"]
floor_time = "datapipeline.transforms.record.floor_time:FloorTimeRecordTransform"
shift_time = "datapipeline.transforms.record.shift_time:ShiftTimeRecordTransform"
where = "datapipeline.transforms.where:where"

[project.entry-points."datapipeline.transforms.stream"]
floor_time = "datapipeline.transforms.stream.floor_time:FloorTimeTransform"
lag = "datapipeline.transforms.stream.lag:LagTransformer"
lead = "datapipeline.transforms.stream.lead:LeadTransformer"
ensure_cadence = "datapipeline.transforms.stream.ensure_ticks:EnsureCadenceTransform"
fill = "datapipeline.transforms.stream.fill:FillTransformer"
granularity = "datapipeline.transforms.stream.granularity:FeatureGranularityTransform"
dedupe = "datapipeline.transforms.stream.dedupe:FeatureDeduplicateTransform"
rolling = "datapipeline.transforms.stream.rolling:RollingTransformer"
where = "datapipeline.transforms.stream.where:WhereTransform"
derive = "datapipeline.transforms.stream.derive:DeriveTransform"

[project.entry-points."datapipeline.transforms.feature"]
scale = "datapipeline.transforms.feature.scaler:StandardScalerTransform"
sequence = "datapipeline.transforms.sequence:WindowTransformer"


[project.entry-points."datapipeline.transforms.vector"]
drop = "datapipeline.transforms.vector:VectorDropTransform"
fill = "datapipeline.transforms.vector:VectorFillTransform"
replace = "datapipeline.transforms.vector:VectorReplaceTransform"

[project.entry-points."datapipeline.mappers"]
"time.synthetic" = "datapipeline.mappers.noop:identity"
encode_time = "datapipeline.mappers.synthetic.time:encode"
identity = "datapipeline.mappers.noop:identity"

[project.entry-points."datapipeline.loaders"]
"core.io" = "datapipeline.sources.factory:build_loader"
"core.foreach" = "datapipeline.sources.foreach:ForeachLoader"
"core.synthetic.ticks" = "datapipeline.sources.synthetic.time.loader:make_time_loader"

[project.entry-points."datapipeline.parsers"]
identity = "datapipeline.parsers.identity:IdentityParser"
"core.temporal_record" = "datapipeline.parsers.temporal_record:TemporalRecordParser"
"core.synthetic.ticks" = "datapipeline.sources.synthetic.time.parser:TimeRowParser"

[project.entry-points."datapipeline.operations.build"]
"core.artifact.schema" = "datapipeline.operations.artifacts.schema:materialize_vector_schema"
"core.artifact.metadata" = "datapipeline.operations.artifacts.metadata:materialize_metadata"
"core.artifact.scaler" = "datapipeline.operations.artifacts.scaler:materialize_scaler_statistics"
"core.artifact.stats" = "datapipeline.operations.artifacts.stats:materialize_vector_stats"

[project.entry-points."datapipeline.operations.runtime"]
"core.runtime.pipeline" = "datapipeline.operations.runtime.pipeline:serve_with_runtime"
"core.runtime.coverage" = "datapipeline.operations.runtime.coverage:inspect_coverage_with_runtime"
"core.runtime.thresholds" = "datapipeline.operations.runtime.thresholds:inspect_thresholds_with_runtime"
"core.runtime.matrix" = "datapipeline.operations.runtime.matrix:inspect_matrix_with_runtime"

[tool.pytest.ini_options]
pythonpath = ["src"]
[project.entry-points."datapipeline.transforms.debug"]
identity = "datapipeline.transforms.debug.identity:IdentityGuardTransform"
lint = "datapipeline.transforms.debug.lint:StreamLint"
