[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jerry-thomas"
version = "5.0.3"
description = "Jerry-Thomas: a stream-first, plugin-friendly data pipeline (mixology-themed CLI)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anders Skott Lind" }]
urls = { "Homepage" = "https://github.com/mr-lovalova/datapipeline", "Repository" = "https://github.com/mr-lovalova/datapipeline", "Issues" = "https://github.com/mr-lovalova/datapipeline/issues" }
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=5.4",
  "jinja2>=3.0",
  "rich>=13",
  "tomlkit>=0.13",
]

[project.optional-dependencies]
# Extra helpers for ML adapters in datapipeline.integrations
ml = [
  "pandas>=2.0",
  "torch>=2.0",
]
test = ["pytest>=8.0"]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.9",
  "types-PyYAML>=6.0",
]

[project.scripts]
jerry = "datapipeline.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["datapipeline.templates*"]

[tool.setuptools.package-data]
datapipeline = [
  "templates/plugin_skeleton/**",
  "templates/dataset_skeleton/**",
  "templates/dataset_skeleton/your-dataset/.env.example",
  "templates/demo_skeleton/**",
  "templates/demo_skeleton/demo/.env.example",
  "templates/stubs/**"
]

[tool.setuptools.exclude-package-data]
datapipeline = [
  "templates/**/.DS_Store",
  "templates/**/*.pyc",
  "templates/**/*.pyo",
  "templates/**/__pycache__/*",
]

[tool.ruff]
target-version = "py311"
extend-exclude = ["src/datapipeline/templates"]

[tool.mypy]
python_version = "3.11"
files = ["src/datapipeline"]
exclude = ["^src/datapipeline/templates/"]
check_untyped_defs = true

[project.entry-points."datapipeline.mappers"]
"time.synthetic" = "datapipeline.mappers.noop:identity"
encode_time = "datapipeline.mappers.synthetic.time:encode"
identity = "datapipeline.mappers.noop:identity"

[project.entry-points."datapipeline.loaders"]
"core.io" = "datapipeline.sources.factory:build_loader"
"core.synthetic.ticks" = "datapipeline.sources.synthetic.time.loader:make_time_loader"

[project.entry-points."datapipeline.parsers"]
identity = "datapipeline.parsers.identity:IdentityParser"
"core.temporal_record" = "datapipeline.parsers.temporal_record:TemporalRecordParser"
"core.synthetic.ticks" = "datapipeline.sources.synthetic.time.parser:TimeRowParser"

[project.entry-points."datapipeline.operations.build"]
"core.artifact.vector_inputs" = "datapipeline.operations.artifacts.vector_inputs:materialize_vector_inputs"
"core.artifact.schema" = "datapipeline.operations.artifacts.schema:materialize_vector_schema"
"core.artifact.metadata" = "datapipeline.operations.artifacts.metadata:materialize_metadata"
"core.artifact.scaler" = "datapipeline.operations.artifacts.scaler:materialize_scaler_statistics"
"core.artifact.stats" = "datapipeline.operations.artifacts.stats:materialize_vector_stats"
"core.artifact.ticks" = "datapipeline.operations.artifacts.ticks:materialize_ticks"

[tool.pytest.ini_options]
pythonpath = ["src"]
