[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jerry-thomas"
version = "7.0.0"
description = "Jerry-Thomas: a stream-first, plugin-friendly data pipeline (mixology-themed CLI)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anders Skott Lind" }]
urls = { "Homepage" = "https://github.com/mr-lovalova/datapipeline", "Repository" = "https://github.com/mr-lovalova/datapipeline", "Issues" = "https://github.com/mr-lovalova/datapipeline/issues" }
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=5.4",
  "jinja2>=3.0",
  "rich>=13",
  "tomlkit>=0.13",
]

[project.optional-dependencies]
# Extra helpers for ML adapters in datapipeline.integrations
ml = [
  "pandas>=2.0",
  "torch>=2.0",
]
parquet = ["pyarrow>=14"]
test = ["pytest>=8.0", "pyarrow>=14"]
mutation = ["mutmut>=3.5,<4"]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pyarrow>=14",
  "ruff>=0.9",
  "types-PyYAML>=6.0",
]

[project.scripts]
jerry = "datapipeline.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["datapipeline.templates*"]

[tool.setuptools.package-data]
datapipeline = [
  "templates/plugin_skeleton/**",
  "templates/plugin_skeleton/.gitignore",
  "templates/dataset_skeleton/**",
  "templates/dataset_skeleton/your-dataset/.env.example",
  "templates/demo_skeleton/**",
  "templates/demo_skeleton/demo/.env.example",
  "templates/stubs/**"
]

[tool.setuptools.exclude-package-data]
datapipeline = [
  "templates/**/.DS_Store",
  "templates/**/*.pyc",
  "templates/**/*.pyo",
  "templates/**/__pycache__/*",
]

[tool.ruff]
target-version = "py311"
extend-exclude = ["src/datapipeline/templates"]

[tool.mypy]
python_version = "3.11"
files = ["src/datapipeline"]
exclude = ["^src/datapipeline/templates/"]
check_untyped_defs = true

[project.entry-points."datapipeline.mappers"]
"time.synthetic" = "datapipeline.mappers.noop:identity"
encode_time = "datapipeline.mappers.synthetic.time:encode"
identity = "datapipeline.mappers.noop:identity"

[project.entry-points."datapipeline.loaders"]
"core.synthetic.ticks" = "datapipeline.sources.synthetic.time.loader:make_time_loader"

[project.entry-points."datapipeline.parsers"]
identity = "datapipeline.parsers.identity:IdentityParser"
"core.temporal_record" = "datapipeline.parsers.temporal_record:TemporalRecordParser"
"core.synthetic.ticks" = "datapipeline.sources.synthetic.time.parser:TimeRowParser"

[project.entry-points."datapipeline.operations.build"]
"core.artifact.variable_records" = "datapipeline.operations.artifacts.variable_records:materialize_variable_records"
"core.artifact.metadata" = "datapipeline.operations.artifacts.metadata:materialize_metadata"
"core.artifact.scaler" = "datapipeline.operations.artifacts.scaler:materialize_scaler_statistics"
"core.artifact.stats" = "datapipeline.operations.artifacts.stats:materialize_vector_stats"
"core.artifact.ticks" = "datapipeline.operations.artifacts.ticks:materialize_ticks"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mutmut]
source_paths = ["src/datapipeline/"]
only_mutate = [
  "src/datapipeline/alignment/broadcast.py",
  "src/datapipeline/alignment/engine.py",
  "src/datapipeline/domain/value.py",
  "src/datapipeline/operations/artifacts/utils.py",
  "src/datapipeline/pipelines/dataset/split.py",
  "src/datapipeline/pipelines/variable/projector.py",
  "src/datapipeline/pipelines/sort.py",
  "src/datapipeline/pipelines/vector/keygen.py",
  "src/datapipeline/transforms/rolling_slope.py",
  "src/datapipeline/transforms/stream/forward_sum.py",
  "src/datapipeline/transforms/stream/logarithm.py",
  "src/datapipeline/transforms/vector/normalize.py",
  "src/datapipeline/transforms/vector/scaler.py",
]
pytest_add_cli_args = ["-q", "-W", "error"]
pytest_add_cli_args_test_selection = [
  "tests/unit/alignment/",
  "tests/unit/artifact_build/",
  "tests/unit/io/",
  "tests/unit/pipeline/",
  "tests/unit/transforms/",
  "tests/integration/",
]
mutate_only_covered_lines = true
